<resources>
    <string name="app_name">CookAndFreeze</string>
    <string name="tab_text_1">Récipients</string>
    <string name="tab_text_2">Stats</string>
    <string name="tab_text_3">Inventaire</string>
    <string name="search">Rechercher</string>
    <string name="scan">Scanner un QR code</string>
    <string name="total_recipients">Total récipients</string>
    <string name="recent_recipients">Récents (7 jours)</string>
    <string name="oldest_recipients">Plus anciens</string>
    <string name="empty_content">Aucun contenu</string>
    <string name="modify">Modifier</string>
    <string name="action_add">Ajouter</string>
    <string name="dialog_title_new_recipient">Nouveau récipient</string>
    <string name="dialog_title_recipient">Récipient</string>
    <string name="label_name">Nom</string>
    <string name="label_content">Contenu</string>
    <string name="action_validate">Valider</string>
    <string name="delete">Supprimer</string>
    <string name="delete_confirm_title">Supprimer ce récipient ?</string>
    <string name="delete_confirm_message">Cette action est irréversible.</string>
    <string name="date_inventory">Dernier inventaire</string>
    <string name="inventaire_reset">Remettre à zéro</string>
    <string name="inventaire_reset_confirm">Vous êtes sûr ?</string>
    <string name="cancel">Annuler</string>
    <string name="clear">Effacer</string>
    <string name="now">Maintenant</string>
    <string name="reset">Réinitialiser</string>
    <string name="reset_short">Réinit.</string>
    <string name="inventory_stats">Statistiques</string>
    <string name="date_added">Date d\'ajout</string>
    <string name="inventaire_title">Scanne-les tous !</string>
    <string name="inventaire_subtitle">Scanne chaque récipient pour l’enlever de la liste.\nObjectif : liste vide.</string>
    <string name="inventaire_remaining">Il en reste %1$d/%2$d !</string>
    <string name="inventaire_empty_title">Tous trouvés ! 🎉</string>
    <string name="inventaire_empty_subtitle">Tu les as tous scannés. Bravo !</string>
    <string name="inventaire_scanned_toast">Un de moins !</string>
</resources>